<resources>
    <string name="app_name">upsplash</string>
    <string name="onBoarding_title1">Create pictures, publish, gather an audience, get feedback!</string>
    <string name="onBoarding_title2">Share with friends, collect collections</string>
    <string name="onBoarding_title3">Upload your favorite pictures and track statistics</string>
    <string name="download_description">The photo is being uploaded</string>
    <string name="download_complete">The file has been uploaded successfully</string>
    <string name="open_file">Open</string>
    <string name="unable_to_open_filed">Unable to open the file</string>
    <string name="file_add_permission_denied">File recording access is prohibited</string>
    <string name="file_add_permission_never_ask_again">Allow reading access in the app settings</string>
    <string name="message_dialog_logout">Are you sure you want to get out? All local data will be deleted.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_bottom_photo">Photo</string>
    <string name="Made_with">Made with:</string>
    <string name="model">Model:</string>
    <string name="exposure">Exposure:</string>
    <string name="aperture">Aperture:</string>
    <string name="local_length">Local length:</string>
    <string name="iso">ISO:</string>
    <string name="download"><u>Download</u></string>
    <string name="login_to_unsplash">Login with Unsplash</string>
    <string name="title_bottom_collection">Collection</string>
    <string name="error_no_connection">There is no network. Refresh the page</string>
    <string name="retry">Retry</string>
    <string name="images_by">photos from</string>
    <string name="title_bottom_profile">Profile</string>
    <string name="Photos_count">Photos</string>
    <string name="tag">#</string>
    <string name="error_result_could_not_be_loaded">Loading error</string>
    <string name="title_share">Share</string>
    <string name="title_search">Search</string>
    <string name="title_logout">Logout</string>
    <string name="title_collection_photo">Collection photos</string>
    <string name="title_detail">Detailed information</string>
    <string name="unknown">Unknown</string>
    <string name="auth_canceled">Authentication failed</string>
</resources>